--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=2453bc453411683e0b87",
+    "/css/app.css": "/css/app.css?id=d93d3e7e516e9c7e2854"
 }
