--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@tailwindcss/forms": "^0.2.1",
         "autoprefixer": "^10.2.4",
         "laravel-mix-tailwind": "^0.1.2",
+        "sweetalert2": "^10.15.5",
         "tailwindcss": "^2.0.3",
         "tailwindcss-plugins": "^0.3.0"
     }
