--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "@tailwindcss/forms": "^0.2.1",
         "autoprefixer": "^10.2.4",
+        "element-ui": "^2.15.1",
         "laravel-mix-tailwind": "^0.1.2",
         "sweetalert2": "^10.15.5",
         "tailwindcss": "^2.0.3",
